# paperwurks-python-backend

./: Dockerfile
.github/workflows/: deploy.yml
designs/: infrastructure.md  overview.md  sprint.md
paperwurksapi/: .coveragerc  .flake8  Dockerfile  Dockerfile.yml  Makefile  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  manage.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements.in  requirements.txt
paperwurksapi/apps/: urls.py
paperwurksapi/apps/ai_orchestration/: README.md
paperwurksapi/apps/audit/: README.md
paperwurksapi/apps/case_management/: README.md
paperwurksapi/apps/compliance/: README.md
paperwurksapi/apps/config/: api.py  asgi.py  celery.py  common.py  middleware.py  settings.py  urls.py  wsgi.py
paperwurksapi/apps/config/settings/: build.py  common.py  development.py  production.py  test.py
paperwurksapi/apps/engagement/: README.md
paperwurksapi/apps/feedback/: README.md
paperwurksapi/apps/identity/docs/: README.md  identity-decision-rationale.md  implementation-plan.md
paperwurksapi/apps/identity/models/: __init__.py  entity.py  identity.py  profile.py
paperwurksapi/apps/identity/tests/: conftest.py
paperwurksapi/apps/identity/tests/api/: test_auth_api.py  test_entity_api.py
paperwurksapi/apps/identity/tests/integration/: test_audit_integration.py  test_auth_flow.py  test_entity_integration.py
paperwurksapi/apps/identity/tests/models/: test_entity.py  test_identity.py
paperwurksapi/apps/identity/tests/services/: test_auth_service.py  test_entity_service.py
paperwurksapi/apps/identity/userstories/: acl.md  entity.md  identity.md  participants.md  profiles.md  roles.md
paperwurksapi/apps/identity/utils/: __init__.py  enum.py
paperwurksapi/apps/notifications/: README.md
paperwurksapi/apps/pack/: README.md
paperwurksapi/apps/property/: README.md
paperwurksapi/apps/search/: README.md
paperwurksapi/apps/timeline/: README.md
paperwurksapi/docs/: index.md  sprint-update.md
paperwurksapi/docs/designs/: EVENTS.md  README_v1.md  UserPersonas.md  osae.md  rag.md
paperwurksapi/requirements/: base.in  dev.in  dev.txt  prod.in
paperwurksapi/scripts/: entrypoint.sh  init-db.sql
scripts/: entrypoint.sh
src/: .coveragerc  Dockerfile  manage.py  requirements.in  requirements.txt
src/docs/designs/: application.md
src/paperwurks/: pytest.ini  wsgi.py
src/paperwurks/config/: common.py
